--- a/css/styles.css
+++ b/css/styles.css
@@ -1,52 +1,96 @@
+/* Google font inter is imported */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap");
+
 /* Common or universal CSS */
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Merriweather', serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Merriweather", serif;
 }
 /* Banner part style */
-#banner{
-    margin: 20px 140px 120px 140px;
+#banner-head {
+  max-width: 1600px;
+  margin: 0 auto;
 }
-.container{
-    width: 82%;
-    max-width: 1320px;
-    padding: 170px 150px;
-    background: url('../resources/Banner\ Image.png');
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    border-radius: 16px;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    z-index: 1;
+#banner {
+  margin: 20px 140px 120px 140px;
 }
-.banner-image-overlay{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    /* overflow: hidden; */
-    background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
-    z-index: -1;
+.container {
+  width: 82%;
+  max-width: 1320px;
+  padding: 170px 150px;
+  background: url("../resources/Banner\ Image.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 16px;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  z-index: 1;
+}
+.banner-image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* overflow: hidden; */
+  background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%);
+  z-index: -1;
 }
 /* .banner-text{
     z-index: 9;
 } */
-.banner-text h2{
-    color: #FFF;
-    text-align: center;
-    font-size: 32px;
-    font-weight: 400;
+.banner-text h2 {
+  color: #fff;
+  text-align: center;
+  font-size: 32px;
+  font-weight: 400;
 }
-.banner-text h1{
-    color: #FFF;
+.banner-text h1 {
+  color: #fff;
+  text-align: center;
+  font-size: 72px;
+  font-weight: 900;
+  line-height: 95px; /* 131.944% */
+}
+/* All categories style */
+#all-cate {
+  margin: 0 auto;
+}
+
+.all-offer h3 {
+  color: #f00;
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  font-size: 88px;
+  font-weight: 700;
+}
+.all-offer p{
+    margin-top: 48px;
+    color: #F00;
     text-align: center;
-    font-size: 72px;
-    font-weight: 900;
-    line-height: 95px; /* 131.944% */
+    font-family: "Inter", sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+}
+.all-offer h4{
+    margin-top: 26px;
+    color: #070211;
+    text-align: center;
+    font-size: 48px;
+    font-weight: 700;
+    font-family: "Inter", sans-serif;
+}
+#all-cate .image{
+    text-align: center;
+    margin-top: 48px;
+    /* width: 100%; */
+} 
+#all-cate .image img{
+    width: 100%;
+    max-width: 800px;
 }
