--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Merriweather", serif;
+  text-decoration: none;
 }
 /* Banner part style */
 #banner-head {
@@ -69,28 +70,111 @@
   font-size: 88px;
   font-weight: 700;
 }
-.all-offer p{
-    margin-top: 48px;
-    color: #F00;
-    text-align: center;
-    font-family: "Inter", sans-serif;
-    font-size: 24px;
-    font-weight: 500;
+.all-offer p {
+  margin-top: 48px;
+  color: #f00;
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  font-size: 24px;
+  font-weight: 500;
 }
-.all-offer h4{
-    margin-top: 26px;
-    color: #070211;
-    text-align: center;
-    font-size: 48px;
-    font-weight: 700;
-    font-family: "Inter", sans-serif;
+.all-offer h4 {
+  margin-top: 26px;
+  color: #070211;
+  text-align: center;
+  font-size: 48px;
+  font-weight: 700;
+  font-family: "Inter", sans-serif;
 }
-#all-cate .image{
-    text-align: center;
-    margin-top: 48px;
-    /* width: 100%; */
-} 
-#all-cate .image img{
-    width: 100%;
-    max-width: 800px;
+#all-cate .image {
+  text-align: center;
+  margin-top: 48px;
+  /* width: 100%; */
+}
+#all-cate .image img {
+  width: 100%;
+  max-width: 800px;
+}
+#Welcome {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 120px;
+}
+#Welcome .container {
+  margin-top: 128px;
+  padding: 128px 126px;
+  text-align: center;
+  background: url("../resources/Vectorrr.png");
+  width: 82%;
+  border-radius: 16px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  z-index: 1;
+}
+
+.welcome-display {
+  display: flex;
+}
+.welcome-img img {
+  width: 100%;
+  max-width: 320px;
+  justify-content: end;
+  align-items: end;
+  background-position: right;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 1;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%);
+  z-index: -1;
+}
+.welcome-text h3 {
+  text-align: start;
+  color: #fff;
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 88px; /* 137.5% */
+  /* letter-spacing: 7.04px; */
+  max-width: 642px;
+}
+.welcome-text p {
+  color: rgba(255, 255, 255, 0.8);
+  font-family: "Inter", sans-serif;
+  font-size: 18px;
+  max-width: 692px;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+  text-align: start;
+  margin-top: 24px;
+}
+.welcome-text .btn {
+  text-align: start;
+  margin: 49px;
+}
+.welcome-text .btn a {
+  padding: 12px 26px;
+  border-radius: 10px;
+  border: 1px solid #fff;
+  color: #fff;
+  text-decoration: none;
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  transition: 0.4s;
+}
+.welcome-text .btn a:hover{
+    background: #fff;
+    color: #f00;
+    transform: scale(1.1);
 }
