Subscribe section added

--- a/css/styles.css
+++ b/css/styles.css
@@ -402,16 +402,20 @@
   margin: 22px 0;
 }
 
-.port-gallery{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-    max-width: 1320px;
-    margin: 0 auto;
-    padding: 20px 10px;
+.port-gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  max-width: 1320px;
+  margin: 0 auto;
+  padding: 20px 10px;
+}
+.port-gallery::after {
+  content: "";
+  width: 350px;
 }
 .port-gallery img {
   width: 100%;
@@ -420,7 +424,64 @@
   object-fit: cover;
   border-radius: 10px;
 }
-.port-gallery::after {
-  content: "";
-  width: 350px;
+/* Subscribe part style */
+.sub-container {
+  margin: 0 auto;
+  width: 82%;
+  max-width: 1320px;
+  text-align: center;
+  border-radius: 16px;
+  background: rgba(255, 0, 0, 0.05);
+  padding: 80px 0;
+}
+.subscribe h3 {
+  color: #070211;
+  text-align: center;
+  font-family: Merriweather;
+  font-size: 48px;
+  font-weight: 900;
+  text-transform: capitalize;
+  margin-top: 20px;
+}
+.subscribe p {
+  margin-top: 20px;
+  color: rgba(7, 2, 17, 0.6);
+  text-align: center;
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 32px; /* 160% */
+  padding: 0 180px;
+}
+.sub-container form {
+  padding: 50px;
+  display: flex;
+  margin: 0 auto;
+}
+.sub-container form input[type="text"] {
+  border-radius: 50px;
+  font-family: Inter;
+  font-size: 20px;
+  background: #fff;
+  width: 628px;
+  height: 72px;
+  border: 0;
+  padding: 30px;
+  margin-left: 200px;
+}
+.sub-container form .button{
+  border-radius: 0px 50px 50px 0px;
+  overflow: hidden;
+  font-family: Inter;
+  font-size: 20px;
+  background: #f00;
+  color: #fff;
+  width: 210px;
+  height: 72px;
+  border: 0;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  padding: 30px;  
+  margin-right: 200px;
 }
