--- a/css/styles.css
+++ b/css/styles.css
@@ -469,7 +469,7 @@
   padding: 30px;
   margin-left: 200px;
 }
-.sub-container form .button{
+.sub-container form .button {
   border-radius: 0px 50px 50px 0px;
   overflow: hidden;
   font-family: Inter;
@@ -482,6 +482,66 @@
   display: flex;
   text-align: center;
   justify-content: center;
-  padding: 30px;  
+  padding: 30px;
   margin-right: 200px;
+}
+/* Footer part style */
+footer {
+  background: #070211;
+  padding: 120px 140px;
+  margin-top: 120px;
+}
+.footer-text {
+  display: flex;
+  justify-content: space-between;
+}
+footer .footer-text p {
+  color: #fff;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 40px; /* 166.667% */
+}
+.footer-copywrite{
+  margin-top: 48px;
+  display: flex;
+  justify-content: space-between;
+}
+footer .footer-copywrite p {
+  color: #fff;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 40px; /* 166.667% */
+}
+footer .footer-text p {
+  max-width: 400px;
+}
+
+.text-right img {
+  width: 24px;
+  height: 24px;
+  margin-right: 20px;
+  margin-top: 10px;
+}
+footer .text-right .display {
+  display: flex;
+}
+footer .line {
+  background: rgba(255, 255, 255, 0.15);
+  width: 1320px;
+  height: 1px;
+  margin-top: 48px;
+}
+footer .footer-social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 48px;
+}
+footer .footer-social img {
+  margin-right: 24px;
+  width: 64px;
+  height: 64px;
+  flex-shrink: 0;
 }
