Final revised for production

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* font-family: "Merriweather", serif;
-  font-family: "Inter", sans-serif; */
   text-decoration: none;
 }
 /* Banner part style */
@@ -22,10 +20,8 @@
   width: 82%;
   max-width: 1320px;
   padding: 170px 150px;
-  background: url("../resources/Banner\ Image.png");
-  background-position: center;
+  background: url("../resources/Banner\ Image.png") no-repeat center;
   background-size: cover;
-  background-repeat: no-repeat;
   border-radius: 16px;
   overflow: hidden;
   width: 100%;
@@ -43,20 +39,20 @@
   background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%);
   z-index: -1;
 }
-/* .banner-text{
-    z-index: 9;
-} */
-.banner-text h2 {
-  color: #fff;
+.banner-text{
+  display: flex;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
   text-align: center;
+  font-family: "Merriweather", serif;
+  color: #fff;
+}
+.banner-text h2 {
   font-size: 32px;
   font-weight: 400;
-  font-family: "Merriweather", serif;
+  
 }
 .banner-text h1 {
-  font-family: "Merriweather", serif;
-  color: #fff;
-  text-align: center;
   font-size: 72px;
   font-weight: 900;
   line-height: 95px; /* 131.944% */
@@ -105,11 +101,11 @@
   margin-bottom: 120px;
 }
 #Welcome .container {
+  width: 82%;
   margin-top: 128px;
   padding: 128px 126px;
-  text-align: center;
-  background: url("../resources/Vectorrr.png");
-  width: 82%;
+  /* text-align: center; */
+  background: url("../resources/Vectorrr.png") ;
   border-radius: 16px;
   background-position: center;
   background-size: cover;
@@ -117,7 +113,16 @@
   position: relative;
   z-index: 1;
 }
-
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%);
+  z-index: -1;
+}
 .welcome-display {
   display: flex;
 }
@@ -130,16 +135,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   z-index: 1;
-}
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%);
-  z-index: -1;
 }
 .welcome-text h3 {
   text-align: start;
@@ -217,9 +212,9 @@
   display: flex;
   margin: 0 auto;
   justify-content: center;
-  /* margin-top: 100px; */
 }
 #new-offer .container {
+  margin: 0 auto;
   max-width: 1320px;
   background: transparent;
 }
@@ -229,8 +224,9 @@
   align-items: center;
 }
 #new-offer .comming-soon .left {
-  max-width: 440px;
+  max-width: 430px;
   margin-top: 60px;
+  padding-right: 20px;
 }
 .comming-soon .left h3 {
   color: #f00;
@@ -256,7 +252,7 @@
   line-height: 32px; /* 160% */
 }
 .comming-soon .middle {
-  max-width: 440px;
+  max-width: 420px;
 }
 .comming-soon .middle .image {
   border-radius: 463px;
@@ -269,8 +265,8 @@
   border-radius: 463px;
 }
 .comming-soon .right {
-  max-width: 440px;
-  padding-left: 40px;
+  max-width: 430px;
+  padding-left: 50px;
   margin-top: 60px;
 }
 .comming-soon .right h3 {
@@ -341,9 +337,7 @@
   /* width: 100%; */
   max-width: 100%;
 }
-/* .inner-holiday .bottom-image img{
-  max-width: 100%;
-} */
+
 #holiday .bottom-red-bg {
   max-width: 1320px;
   height: 152px;
@@ -361,7 +355,7 @@
 }
 #holiday .holiday-right {
   position: absolute;
-  bottom: -5px;
+  bottom: -4px;
   right: 0;
 }
 #holiday .holiday-right .off50 {
@@ -423,7 +417,13 @@
   height: auto;
   object-fit: cover;
   border-radius: 10px;
+  transition: all linear .4s;
 }
+.port-gallery img:hover{
+  transform: scale(1.05);
+  opacity: 0.7;
+}
+
 /* Subscribe part style */
 .sub-container {
   margin: 0 auto;
@@ -457,6 +457,7 @@
   padding: 50px;
   display: flex;
   margin: 0 auto;
+  position: relative;
 }
 .sub-container form input[type="text"] {
   border-radius: 50px;
@@ -471,23 +472,29 @@
 }
 .sub-container form .button {
   border-radius: 0px 50px 50px 0px;
+  position: absolute;
   overflow: hidden;
   font-family: Inter;
   font-size: 20px;
+  line-height: 12px;
   background: #f00;
   color: #fff;
   width: 210px;
   height: 72px;
   border: 0;
-  display: flex;
-  text-align: center;
-  justify-content: center;
   padding: 30px;
-  margin-right: 200px;
+  right: 230px; 
+  transition: 0.4s;
+}
+.sub-container form .button:hover{
+  background: #fff;
+  color: #f00;
+  border: 1px solid #f00;
 }
 /* Footer part style */
 footer {
   background: #070211;
+  width: 100%;
   padding: 120px 140px;
   margin-top: 120px;
 }
@@ -527,9 +534,17 @@ footer .footer-text p {
 footer .text-right .display {
   display: flex;
 }
+footer .text-right a{
+  color: #FFF;
+font-family: Inter;
+font-size: 24px;
+text-decoration: none;
+font-weight: 500;
+line-height: 40px; /* 166.667% */
+}
 footer .line {
   background: rgba(255, 255, 255, 0.15);
-  width: 1320px;
+  width: 100%;
   height: 1px;
   margin-top: 48px;
 }
